Angular skeleton and routing

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>euvic-camp-2023</title>
-  <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 <body>
 <app-root></app-root>
