Client identity, minor fixes and CORS

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>euvic-camp-2023</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <base href="/">
+  <link href="/assets/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
 <app-root></app-root>
